@@ -2,30 +2,23 @@ package com.ivanfranchin.orderapi.rest.files;
 
 import com.ivanfranchin.orderapi.dto.files.FilesResponseMessage;
 import com.ivanfranchin.orderapi.dto.files.ResponseFile;
+import com.ivanfranchin.orderapi.mapper.FileMapper;
 import com.ivanfranchin.orderapi.model.FileDB;
 import com.ivanfranchin.orderapi.service.FileStorageService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import jakarta.persistence.EntityNotFoundException;
+import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static com.ivanfranchin.orderapi.config.SwaggerConfig.BEARER_KEY_SECURITY_SCHEME;
 
-@Controller
+@RestController
 @RequiredArgsConstructor
 public class FilesController {
 
@@ -33,50 +26,35 @@ public class FilesController {
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @GetMapping("/files")
-    public ResponseEntity<List<ResponseFile>> getListFiles() {
-        List<ResponseFile> files = storageService.getAllFiles().map(dbFile -> {
-            String fileDownloadUri = ServletUriComponentsBuilder
-                    .fromCurrentContextPath()
-                    .path("/files/")
-                    .path(dbFile.getId())
-                    .toUriString();
-
-            return new ResponseFile(
-                    dbFile.getName(),
-                    fileDownloadUri,
-                    dbFile.getType(),
-                    dbFile.getData().length);
-        }).collect(Collectors.toList());
-
-        return ResponseEntity.status(HttpStatus.OK).body(files);
+    public List<ResponseFile> getListFiles() {
+        return storageService.getAllFiles()
+                .map(FileMapper::toResponseFile)
+                .toList();
     }
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @GetMapping("/files/{id}")
-    public ResponseEntity<byte[]> getFile(@PathVariable String id) {
+    public byte[] getFile(@PathVariable String id, HttpServletResponse response) {
         Optional<FileDB> fileDB = storageService.getFile(id);
 
         if (fileDB.isEmpty()) {
-            throw new EntityNotFoundException();
+            throw new FileNotFoundException();
         }
 
-        return ResponseEntity.ok()
-                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + fileDB.get().getName() + "\"")
-                .body(fileDB.get().getData());
+        response.addHeader(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + fileDB.get().getName() + "\"");
+        return fileDB.get().getData();
     }
 
     @Operation(security = {@SecurityRequirement(name = BEARER_KEY_SECURITY_SCHEME)})
     @PostMapping("/files/upload")
-    public ResponseEntity<FilesResponseMessage> uploadFile(@RequestParam("file") MultipartFile file) {
-        String message = "";
+    public FilesResponseMessage uploadFile(@RequestParam("file") MultipartFile file) {
         try {
             storageService.store(file);
-
-            message = "Uploaded the file successfully: " + file.getOriginalFilename();
-            return ResponseEntity.status(HttpStatus.OK).body(new FilesResponseMessage(message));
         } catch (Exception e) {
-            message = "Could not upload the file: " + file.getOriginalFilename() + "!";
-            return ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).body(new FilesResponseMessage(message));
+            throw new FileUploadFailureException("Could not upload the file: " + file.getOriginalFilename() + "!");
         }
+
+        return new FilesResponseMessage("Uploaded the file successfully: " + file.getOriginalFilename());
     }
+
 }
